added some basic styling to links

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -5,22 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <nav>
-    <ul>
-        <li>About</li>
-        <li>Store</li>
-        <li>Gmail</li>
-        <li>Images</li>
+    <ul id="navbar">
+        <li><a href="about.asp">About</a></li>
+        <li><a href="store.asp">Store</a></li>
+        <li><a href="gmail.asp">Gmail</a></li>
+        <li><a href="images.asp">Images</a></li>
     </ul>
 </nav>
 
 <body>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+
+    <div class="search">
+        <input type="text" />
+        <input type="submit" value="Go" />
+    </div>
+
+    <div class="buttons">
+        <button type="button">Google Search</button>
+        <button type="button">I'm Feeling Lucky</button>
+    </div>
 </body>
 
 <footer>
-
+    <ul id="footerlist">
+        <li><a href="advertising.asp">Advertising</a></li>
+        <li><a href="business.asp">Business</a></li>
+        <li><a href="howsearchworks.asp">How Search Works</a></li>
+        <li><a href="privacy.asp">Privacy</a></li>
+        <li><a href="terms.asp">Terms</a></li>
+        <li><a href="settings.asp">Settings</a></li>
+    </ul>
 </footer>
 </html>
