added styling to the search bar & nav + footer

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -20,10 +20,12 @@
 <body>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 
-    <div class="search">
-        <input type="text" />
-        <input type="submit" value="Go" />
-    </div>
+    <form id="search-form" >
+        <div class="search">
+            <input type="text" name="search" class="round" />
+            <input type="submit" class="corner" value="Go" />
+        </div>
+    </form>
 
     <div class="buttons">
         <button type="button">Google Search</button>
