Changed background to green

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
+<body>
+    
 <nav>
     <ul id="navbar">
         <li><a href="about.asp">About</a></li>
@@ -17,7 +19,7 @@
     </ul>
 </nav>
 
-<body>
+<main>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 
     <form id="search-form" >
@@ -31,7 +33,7 @@
         <button type="button">Google Search</button>
         <button type="button">I'm Feeling Lucky</button>
     </div>
-</body>
+</main>
 
 <footer>
     <ul id="footerlist">
@@ -43,4 +45,7 @@
         <li><a href="settings.asp">Settings</a></li>
     </ul>
 </footer>
+
+</body>
+
 </html>
